--- a/gb/15/11/1/n4563227.md
+++ b/gb/15/11/1/n4563227.md
@@ -1,18 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pdz229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pdz229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pdz229/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【厨具天堂】“游刃有余”选厨刀（上）</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/09/Kehrein_Matthias_pe0a2323-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年12月21日讯】好<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E5%88%80.md#1">刀</a>在手，准备每日的饭食便轻松不少，尽享烹饪之乐。德国美食评论家Wolfram Siebeck说：“一把好刀用起来应充满灵巧，片肉能像片奶油般时滑顺，番茄、洋葱等圆滚滚的蔬果也能轻松地刀起刀落，你便会知道手中握的就是最佳刀具。”</p>
-<p>世界上主流的厨<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E5%88%80.md#1">刀</a>大致分三大派系：中式、西式和日式。德国的索林根(Solingen)和日本的关市（Seki-City）是有名的两大刀都，现在市面上的很多刀具大都出自于此，而且很多都有独特的制作工艺及久远的传承历史。</p>
+	<p>【大纪元2016年12月21日讯】好<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%80.md#1">刀</a>在手，准备每日的饭食便轻松不少，尽享烹饪之乐。德国美食评论家Wolfram Siebeck说：“一把好刀用起来应充满灵巧，片肉能像片奶油般时滑顺，番茄、洋葱等圆滚滚的蔬果也能轻松地刀起刀落，你便会知道手中握的就是最佳刀具。”</p>
+<p>世界上主流的厨<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%80.md#1">刀</a>大致分三大派系：中式、西式和日式。德国的索林根(Solingen)和日本的关市（Seki-City）是有名的两大刀都，现在市面上的很多刀具大都出自于此，而且很多都有独特的制作工艺及久远的传承历史。</p>
 <p>· 西式厨刀</p>
 <p>主厨刀/厨师刀（Chief&#8217;s Knife/Kochmesser），弧形刀刃，能够切肉、鱼和蔬菜。相较于中式菜刀靠自身重量由上而下的切法，西式刀是用划拉或像铡刀的切法，只抬起后半部分，刀尖几乎不用离开案板。德系厨刀可看作是西式厨刀的巅峰。</p>
 <p>· 日式厨刀</p>
 <p>刺身刀（Sashimi），三德（Santoku）和出刃（Deba），都是根据日本饮食习惯和文化产生的刀型。“三德”取三种“美德”之意，即处理鱼、肉、菜都可，是针对东方人烹饪习惯基于主厨刀的改良版，尺寸变小了，刀尖变圆。西方厂家也钟意生产三德刀，多于四把的套刀几乎都会有一把是三德。</p>
-<figure id="attachment_6518946" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2015/11/151031193345100658-600x397.jpg" alt="好刀在手，准备每日的饭食便轻松不少，尽享烹饪之乐。" title="好刀在手，准备每日的饭食便轻松不少，尽享烹饪之乐。" width="600" b="397"
-	class="size-large wp-image-6518946" /></a><figcaption class="wp-caption-text">好刀在手，准备每日的饭食便轻松不少，尽享烹饪之乐。</figcaption></figure>
+<figure id="attachment_6518946" aria-describedby="caption-attachment-6518946" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/11/151031193345100658-600x397.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-6518946" class="wp-caption-text">好刀在手，准备每日的饭食便轻松不少，尽享烹饪之乐。</figcaption></figure>
 <p>“工欲善其事，必先利其器。”刀具要经过选料、切割、锻造、淬火热处理、研磨抛光、平衡点定位、刀柄配制、开刃、开锋等等复杂工艺，这里对挑选厨刀提供了一些参考。</p>
 <p><h2> 材料</h2>
 <p>完美的刀刃要满足高硬度，不易崩刃、卷口，易打磨，不生锈，还得便宜。可实际情况是－－很难尽善尽美。</p>
@@ -36,42 +35,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/1/3/n10950893.md#1">香槟迷思和科学秘密</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/2/6/n11026889.md#1">打嗝排气少吃！让你胀气的4类食物 苹果也上榜</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/3/15/n11116792.md#1">“8杯水减肥法”月瘦5kg？营养师推荐 3种人不适合</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/7/11/n11378774.md#1">热“消”有理  5样最夯小家电</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/7/18/n11393147.md#1">艺术双人组 环保手作&自然果酿</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/19/8/14/n11453188.md#1">2019下半年消费趋势 ASMR疗愈风潮</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12090091.md#1">家乐福采购经理勾统促党成员 诈上架费近2千万</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12090453.md#1">“创罩奇迹”台湾成全球第二大口罩生产国</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12090712.md#1">台湾研发10分钟快筛试剂 通过临床验证</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12090221.md#1">台行政院长：疫情让台商加速回台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/12/30/n1168809.md#1">中国年菜--牡丹年年发</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/1/24/n1988884.md#1">【厨艺麻雀变凤凰】健康开运年菜集锦</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/24/n4624272.md#1">48道年菜料理轻松做 鲜蔬入菜不油腻</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/2/5/n4634317.md#1">【私房菜专栏】年菜─长年菜</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/2/12/n4638517.md#1">如何健康吃年菜：清烫烹调</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/17/n10152264.md#1">草虾低脂肪、高蛋白 6步做干烧虾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13596346.md#1">最美味牛肉之一 “台湾和牛”问世 专家看好</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/29/n13537266.md#1">基隆庙口夜市 台湾指标 国际驰名</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/29/n13536667.md#1">六合夜市 老店承传的滋味</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/29/n13536945.md#1">有吃又有玩 斗六夜市</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/pdz229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085546.md#1">萧茗采访班农：你见了国内出逃科学家吗</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085708.md#1">美B-1B轰炸机出动 中共少将为武统台湾降温</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085740.md#1">华裔病毒研究者遭枪杀 更多细节流出</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12083374.md#1">【十字路口】美领军索赔 万亿关税警告中共</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12087962.md#1">中共领导人长命之谜 靠的是什么？</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082975.md#1">“雷神”为巨石强森庆生 石头蛋糕笑翻网友</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088319.md#1">《战狼》片方高管内讧 原副董事长出逃海外</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082574.md#1">IG用英文勉励网友 范冰冰微博异样噤声</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12084156.md#1">詹子晴32岁总资产上千万 靠2招成副业女王</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/20/n12044745.md#1">人居两地 情发一心  宝玉和黛玉的心灵相知</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082623.md#1">唐朝进士奇闻：耳朵里的天国世界</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/25/n12061145.md#1">赵盾一梦“兆绝后好” 满门被灭 孤儿独好</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/29/n12068903.md#1">【细语人生】FBI盯上了他（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/11/1/n4563227.htm">【厨具天堂】“游刃有余”选厨刀（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/11/1/n4563227.htm">【厨具天堂】“游刃有余”选厨刀（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/pdz229/djy/blob/master/gb/15/11/1/n4563227.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/11/1/n4563227.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
